# Contagion-Spread

./: .gitignore  README.md  main.py  pyproject.toml
src/contagion-app/: app.py
